--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,19 @@
+:root{
+	font-size:100%;
+	scroll-behavior: smooth;
+}
+/*Variaveis*/
+$primary: #01c7da;
+$white:#fafafa;
+$darkblue: #1193bf;
+$primary-gradient: radial-gradient(circle at 0% 0%, #009898 0, #00989f 7.14%, #0097a6 14.29%, #0097ac 21.43%, #0096b2 28.57%, #0095b7 35.71%, #0093bb 42.86%, #1092bf 50%, #2a90c2 57.14%, #3c8fc4 64.29%, #4b8cc5 71.43%, #598ac6 78.57%, #6688c5 85.71%, #7285c4 92.86%, #7d83c1 100%);
+$soft-shadow: 3px 3px 16px rgba(15,15,15,.1);
+$hard-shadow: 3px 3px 10px rgba(15,15,15,.2);
+
+#root{
+	width: 100%;
+}
+
 .App {
 	text-align: center;
 	font-family: "Roboto", sans-serif;
@@ -19,27 +35,42 @@
 }
 
 .btn-primary {
-	background-color: #01c7da;
+	background-color: $primary;
 	border-radius: 4px;
 	padding: 0.8rem 1.5rem;
 	border: 0;
-	color: #fff;
+	color: $white;
 	font-size: 1.2rem;
 	font-weight: 500;
+	margin-top: 10px;
+	box-shadow: $soft-shadow;
+	cursor: pointer;
+	transition: background .6s ease-in-out, box-shadow .6s ease-in-out;
+	& a{
+		color: $white;
+		text-decoration: none;
+	}
+	&:hover{
+		background: lighten($primary, 2%);
+		box-shadow: $hard-shadow;
+	}
 }
+
+
 .paragraph {
 	text-align: left;
 	font-size: 1rem;
 	margin-bottom: 1rem;
 	max-width: 24rem;
+	line-height: 1.5;
 }
 
 .our-projetc {
 	display: flex;
 	align-items: center;
-	color: #1193bf;
+	color: $primary;
 	width: 100%;
-	min-height: 30vh;
+	min-height: 40vh;
 	flex-direction: column;
 }
 
@@ -47,7 +78,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	color: #fff;
+	color: $white;
 	background-color: #01c7da;
 	width: 100%;
 	min-height: 30vh;
@@ -56,19 +87,26 @@
 .footer {
 	display: flex;
 	align-items: center;
-	background-color: #1193bf;
+	background-color: $darkblue;
 	width: 100%;
 	min-height: 30vh;
 }
 
 .fale-conosco {
-	color: #01c7da;
+	color: $primary;
 	border-radius: 4px;
 	padding: 0.8rem 1.5rem;
 	border: 0;
-	background-color: #fff;
+	background-color: $white;
 	font-size: 1.2rem;
 	font-weight: 600;
+	box-shadow: $soft-shadow;
+	transition: background .6s ease-in-out, box-shadow .6s ease-in-out;
+	cursor: pointer;
+	&:hover{
+		background: lighten($white, 2%);
+		box-shadow: $hard-shadow;
+	}
 }
 
 .paragrap-center {
@@ -87,54 +125,88 @@
 		width: 150px;
 		height: 150px;
 		border-radius: 4px;
-		background-color: #1193bf;
-		color: #fff;
+		background-color: $primary;
+		color: $white;
 		padding: 5px;
 		margin: 5px;
 		align-items: center;
 		text-align: center;
+		box-shadow: $soft-shadow;
+		transition: box-shadow .6s ease-in-out, background .6s ease-in-out, transform .6s ease-in;
+		transform-origin: bottom;
+		cursor: pointer;
+		&:hover{
+			box-shadow:$hard-shadow;
+			background: lighten($primary, 2%);
+			transform: scale(1.02);
+		}
 	}
 
 	.icon {
 		font-size: 5rem;
+		&-background{
+			right: 0;
+			bottom: 0;
+		}
 	}
 
 	.round-line {
 		width: 50%;
 		margin: 3px;
 		height: 3px;
-		background-color: #fff;
+		background-color: $white;
 	}
-}
-
-.boot {
-	position: fixed;
-	z-index: 1;
-	bottom: 5px;
-	left: 5px;
 }
 
 .exam-button {
 	height: 80px;
 	width: 80px;
 	font-size: 16px;
-	max-width: 80x;
-	position: relative;
+	max-width: 80px;
+	position: absolute;
 	border-radius: 100%;
-	color: #fff;
+	color: $white;
 	border: 0;
 	display: flex;
-	box-shadow: 0px 0px 36px -13px #000;
-	background: rgba(50, 187, 199, 1);
+	box-shadow: $soft-shadow;
+	background: $primary;
+	bottom: 30px;
+	right: 30px;
+	position: fixed;
+	cursor: pointer;
+	transition: background .6s ease-in-out, box-shadow .6s ease-in-out;
+	z-index: 2;
+	&:hover{
+		background: lighten($primary, 2%);
+		box-shadow: $hard-shadow;
+	}
+	&::before{
+		content: '';
+		height: 90px;
+		width: 90px;
+		position: absolute;
+		border-radius: 100%;
+		border: 2px solid $primary;
+		top: 50%;
+		left: 50%;
+		transform:translate(-50%, -50%) scale(.8);
+		z-index: 1;
+		animation: popin 2s forwards alternate infinite ease-in-out;
+	}
 }
+@keyframes popin{
+	from{transform:translate(-50%, -50%) scale(.8);opacity: 0;}
+	to{transform:translate(-50%, -50%) scale(1.005);opacity: .6;}
+}
+
 
 @media (min-width: 300px) {
 	.App-header {
-		background-color: #1193bf;
+		background-image: $primary-gradient;
 		min-height: 100vh;
 		display: flex;
 		flex-direction: column;
-		color: #fff;
+		color: $white;
 		position: relative;
 		overflow: hidden;
 	}
@@ -145,6 +217,7 @@
 		position: absolute;
 		bottom: -75px;
 		right: -83px;
+		z-index: 0;
 	}
 
 	.info-group {
@@ -159,7 +232,7 @@
 	}
 
 	.nav {
-		background-color: #fff;
+		background-color: $white;
 		width: 100%;
 		display: flex;
 		justify-content: space-between;
@@ -168,6 +241,7 @@
 			height: 78px;
 			padding: 7px;
 			display: flex;
+			object-fit: contain;
 		}
 
 		.menu {
@@ -189,13 +263,17 @@
 
 	#menuToggle a {
 		text-decoration: none;
-		color: #1193bf;
+		color: $primary;
 
 		transition: color 0.3s ease;
 	}
 
+	.btn-primary{
+		margin-top: 30px;
+	}
+
 	#menuToggle a:hover {
-		color: #1193bf;
+		color: $primary;
 	}
 
 	#menuToggle input {
@@ -221,7 +299,7 @@
 		margin-bottom: 5px;
 		position: relative;
 
-		background: #1193bf;
+		background: $primary;
 		border-radius: 3px;
 
 		z-index: 1;
@@ -243,7 +321,7 @@
 	#menuToggle input:checked ~ span {
 		opacity: 1;
 		transform: rotate(45deg) translate(-2px, -1px);
-		background: #1193bf;
+		background: $primary;
 	}
 
 	#menuToggle input:checked ~ span:nth-last-child(3) {
@@ -262,7 +340,7 @@
 		padding: 50px;
 		padding-top: 125px;
 		box-shadow: 0px 0px 16px -5px #000;
-		background: #fff;
+		background: $white;
 		height: 150vh;
 		list-style-type: none;
 		-webkit-font-smoothing: antialiased;
@@ -287,11 +365,11 @@
 
 @media (min-width: 800px) {
 	.App-header {
-		background-color: #1193bf;
+		background-color: $primary;
 		min-height: 70vh;
 		display: flex;
 		flex-direction: column;
-		color: #fff;
+		color: $white;
 		position: relative;
 		overflow: hidden;
 	}
@@ -312,7 +390,7 @@
 	.how-help,
 	.footer,
 	.our-projetc {
-		padding: 40px;
+		padding: 70px;
 	}
 
 	.navigation {
@@ -320,7 +398,7 @@
 	}
 
 	.nav {
-		background-color: #fff;
+		background-color: $white;
 		width: 100%;
 		display: flex;
 		justify-content: space-between;
@@ -339,23 +417,25 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-		}
-
-		.menu-item {
-			height: 100%;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		}
-
-		.menu-item a {
-			color: #1193bf;
-			text-align: center;
-			text-decoration: none;
-			padding: 0 10px;
-			height: 100%;
-			display: flex;
-			align-items: center;
+			&-item{
+				height: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				& a{
+					color: $primary;
+					text-align: center;
+					text-decoration: none;
+					padding: 0 10px;
+					height: 100%;
+					display: flex;
+					align-items: center;
+					transition: color .6s ease-in;
+					&:hover{
+						color: $darkblue;
+					}
+				}
+			}
 		}
 	}
 }
